        args.  As a result, the method signatures have changed.

        Fixed support for as_json in ScrolledSearch
        Fixed implicit IO::Handle bug when trying to log in older Perls
        Fixed a bug in index_stats and addded 'get' stats and groups.
        Added 'fields' to clear_cache
        Corrected spelling of 'quorom' to 'quorum'
0.47    2011-10-24
        Merged patch from AVAR, which ensures that the servers are used in
        random order.

0.46    2011-09-07
        Fixed support for parent/child in reindex() - thanks to PERLER for
        reporting

0.45    2011-08-27
        Doc typo corrected

0.44    2011-08-27
        Added support for deflate() to all HTTP Transport modules.

0.43    2011-08-26
        Added ElasticSearch::Transport::AECurl, and async backend which uses
        libcurl, via AnyEvent::Curl::Multi

0.42    2011-08-26
        Dull Dist::Zilla change, for CPAN

0.41    2011-08-26

        BREAKING CHANGES:
         - ElasticSearch::Transport::Thrift is now in a separate release
         - delete_index() and delete_mapping() now require an index
           parameter, to avoid accidental deletes.
         - the return value for the bulk() methods, when { as_json => 1}
           is specified, is now the JSON equivalent of the normal
           return value, not the raw value from ES

        OTHER:
         - started using Dist::Zilla
         - Added ElasticSearch::Transport::Curl, as a separate release
         - get_aliases now works with {as_json => 1}

0.40    2011-08-10

        BREAKING CHANGE:
         - index_exists now returns an empty list if the index doesn't exist.
           Previously, it threw an error.

        OTHER:
         - Deprecated the use of top level mapping parameters in put_mapping()
           in favour of just using the 'mapping' param
         - IDs could not contain eg "/" before - now fixed with Any::URI::Escape
           ie (URI::Escape or URI::Escape::XS)